--- a/connect-4/index.html
+++ b/connect-4/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles/main.css" />
-    <title>Document</title>
+    <title>Connect-4 By Mohamed Mohamed</title>
   </head>
   <body>
     <h1>Connect 4</h1>
@@ -29,8 +29,8 @@
     </div>
     <hr />
     <div class="button-wrapper">
-      <button class="2-player">2 player mode</button>
-      <button class="computer-button" >computer mode </button>
+      <button class="coming-soon">2 player online mode</button>
+      <button class="coming-soon" >computer mode </button>
       <button class="reset">Restart Game</button> 
     </div>
     <hr />
